# Cplusplus

./: README.md  bubble.cpp  compressao  compressao.cpp  insertion.cpp  merges.cpp  selection.cpp  stack.cpp  stacks.cpp
binq/: filabin  filabin.cpp
filas/: fila  fila.cpp
listaesimples/: Documento sem título 1  lista.cpp  lista.h  main  main.cpp
listasduplae/: lista_dupla.cpp  listad
pilhas/: main  main.cpp  pilha.h  pilha_din.cpp  pilha_est.cpp  pilhadin  pilhaest
questao1/: CMakeLists.txt  principal.c  saida_produto_consumidor.txt  saida_produto_consumidor2.txt
questao2/: CMakeLists.txt  FILE.md  itemA.c  itemBC.c
tabf/: mamaco.txt  tabf  tabf.cpp
